# deep_research_paper_chat

./: .gitignore  README.md  pyproject.toml  terminal_chat.py
docs/plans/: 2026-02-23-research-frontend-design.md
research_frontend/: .gitignore  api.py  app.py  pyproject.toml  requirements.txt
src/crewai_flow_workshop1/: main.py
src/crewai_flow_workshop1/crews/hr_crew/: hr_crew.py
src/deep_research_agent/: main.py
