[project]
name = "deep_research_agent"
version = "0.1.0"
description = "Deep research agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "colorama>=0.4.6",
    # "crewai[tools]==1.9.3",
    "crewai[tools] @ git+https://github.com/crewAIInc/crewAI.git@main#subdirectory=lib/crewai",
    "firecrawl-py>=4.15.0",
    "mcp>=1.23.3",
    "requests>=2.32.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
kickoff = "deep_research_agent.main:kickoff"
run_crew = "deep_research_agent.main:kickoff"
plot = "deep_research_agent.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
